--- a/main.css
+++ b/main.css
@@ -818,6 +818,62 @@ a:link:hover {
   transition: fill 0.5s cubic-bezier(0.28, 0.11, 0.32, 1);
 }
 
+/* ------------------------------ Beta Badge #1 ----------------------------- */
+
+.badge[data-v-0eda6c4a] {
+  font-size: 0.70588rem;
+  line-height: 1.33337;
+  font-weight: 400;
+  letter-spacing: -0.01em;
+  font-family: SF Pro Text, system-ui, -apple-system, BlinkMacSystemFont,
+    Helvetica Neue, Helvetica, Arial, sans-serif;
+  display: inline-block;
+  padding: 2px 10px;
+  white-space: nowrap;
+  background: none;
+  border-radius: 18px;
+  margin-left: 10px;
+  /* border: 1px solid var(--color-figure-teal); */
+  border: 1px solid var(--color-figure-orange);
+  /* color: var(--color-figure-teal); */
+  color: var(--color-figure-orange);
+  -webkit-transition: color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1);
+  -o-transition: color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1);
+  -moz-transition: color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1);
+  transition: color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1);
+}
+
+/* ------------------------------ Beta Badge #2 ----------------------------- */
+
+small[data-v-91bcffaa] {
+  font-size: 1.41176rem;
+  line-height: 1.16667;
+  font-weight: 600;
+  letter-spacing: 0.009em;
+  font-family: SF Pro Display, system-ui, -apple-system, BlinkMacSystemFont,
+    Helvetica Neue, Helvetica, Arial, sans-serif;
+  padding-left: 10px;
+  /* color: var(--color-figure-teal); */
+  color: var(--color-figure-orange);
+  -webkit-transition: color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1);
+  -o-transition: color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1);
+  -moz-transition: color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1);
+  transition: color 0.5s cubic-bezier(0.28, 0.11, 0.32, 1);
+}
+@media only screen and (max-width: 1250px) {
+  small[data-v-91bcffaa] {
+    font-size: 1.23529rem;
+    line-height: 1.19048;
+    font-weight: 600;
+    letter-spacing: 0.011em;
+    font-family: SF Pro Display, system-ui, -apple-system, BlinkMacSystemFont,
+      Helvetica Neue, Helvetica, Arial, sans-serif;
+  }
+}
+small[data-v-91bcffaa]:before {
+  content: attr(data-tag-name);
+}
+
 /* ---------------------------------- Menu ---------------------------------- */
 
 .item {
@@ -1558,7 +1614,8 @@ a:link:hover {
   -moz-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  width: 50px;
+  text-decoration: none !important;
+  /* width: 50px; */
   height: 100%;
 }
 
